--- a/src/styles/CapSelector.css
+++ b/src/styles/CapSelector.css
@@ -1,3 +1,8 @@
+
+.slidder-wrapper {
+  margin: 50px;
+}
+
 .cap-selector .rc-slider-track, .cap-selector .rc-slider-rail {
   background-color: #e9e9e9 !important;
 }
